Fix weird missing space issue for radios and checkboxes and remove size edit for radios

--- a/styles.css
+++ b/styles.css
@@ -134,3 +134,7 @@ div.dragged i.control-icon {
 .float-right {
   float: right;
 }
+
+.one-rem-size {
+  font-size: 1rem;
+}
